--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="cardInside">
     <h3 class="back">HAPPY BOB DAY!</h3>
     <p>舅公</p>
-    <p>生日快樂！</br>祝你身體健康！心想事成！萬事如意！生意興隆！財源廣進！</p>
+    <p>生日快樂！</br>祝你身體健康！心想事成！萬事如意！生意興隆！搵多啲錢！</p>
     <p class="name">MAYA</br>   &</br>NARA</p>
   </div>
   <img class="balloonFive" src="cake.png" width="150" height="150">
